testing if html embed messes with rendering (with html embed, rendered not right on the marker)

--- a/test2/index.html
+++ b/test2/index.html
@@ -45,12 +45,10 @@
                 look-at="[camera]">
             </a-entity>
             <!-- adding temperature panel using open weather api and look-at-->
-            <a-entity class="panel" htmlembed="ppu: 256" position="0 2.6 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
-                <!-- displaying location -->
+            <!--<a-entity class="panel" htmlembed="ppu: 256" position="0 2.6 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
                 <div id="location"> Loc blue? </div>
-                <!-- displaying celcius temp -->
                 <div id="tempC"> Tem blue? </div>
-            </a-entity>
+            </a-entity> -->
     </a-scene>
-	<script src="scripts.js"></script>
+	<!--<script src="scripts.js"></script>-->
 </body>
