--- a/test2/index.html
+++ b/test2/index.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
     <!--aframe-look-at-component to tell an entity to face towards another entity or position-->
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <!-- importing html-embed-component to add html elements to a-scene -->
+    <script src="https://supereggbert.github.io/aframe-htmlembed-component/dist/build.js"></script>
 </head>
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
@@ -39,6 +41,11 @@
                     font: exo2semibold;
                     value: What: Weekly 4 km runs\nWhen: Fridays @ 12 PM \nWhere: Edge office"
                 look-at="[camera]">
+            </a-entity>
+            <!-- adding temperature panel using open weather api and look-at-->
+            <a-entity class="panel" htmlembed="ppu: 256" position="0 2.6 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
+                <div id="location"> Loc blue? </div>
+                <div id="tempC"> Tem blue? </div>
             </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
