--- a/test2/index.html
+++ b/test2/index.html
@@ -10,6 +10,7 @@
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <!-- importing html-embed-component to add html elements to a-scene -->
     <script src="https://supereggbert.github.io/aframe-htmlembed-component/dist/build.js"></script>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
@@ -50,5 +51,6 @@
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
+    <script src="scripts.js"></script>
 </body>
 </html>
