--- a/test/index.html
+++ b/test/index.html
@@ -17,42 +17,19 @@
 <body>
     <a-scene embedded arjs>
         <a-marker preset="hiro">
-            <!--adding .gltf 3D model with animation and url with same domain to avoid CORS issue-->
-            <a-entity position="0 0 0"
-                      scale="0.6 0.6 0.6"
-                      gltf-model="https://kristenphan.github.io/ar/assets/models/trump/scene.gltf" 
-                      animation-mixer>
-            </a-entity>
-            <!-- adding header text with custom msdf font with look-at -->
-            <a-entity
-                position="0 2.4 0"
-                text=
-                    "color: black; 
-                    align: center; 
-                    width: 3; 
-                    font: https://kristenphan.github.io/ar/assets/fonts/oredo-regular-msdf/oredo-regular-msdf.json;
-                    value: !Make Ls Run Great Again!"
-                look-at="[camera]">
-            </a-entity>
-            <!-- adding body text with look-at-->
-            <a-entity
-                position="0 2 0"
-                text=
-                    "color: black; 
-                    align: center; 
-                    width: 2; 
-                    font: exo2semibold;
-                    value: What: Weekly 4 km runs\nWhen: Fridays @ 12 PM \nWhere: Edge office"
-                look-at="[camera]">
-            </a-entity>
             <!-- adding temperature panel using open weather api and look-at-->
             <a-entity class="panel" htmlembed="ppu: 256" position="-2 1.5 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
-                <!-- hardcoding img src -->
-                <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="image">
-		        <!-- displaying location -->
-                <div id="location"> N/A </div>
-                <!-- displaying celcius temp -->
-                <div id="tempC"> N/A </div>
+                <article class="widget">
+                    <div class="weatherIcon"><i class="wi wi-day-cloudy"></i></div>
+                    <div class="weatherInfo">
+                        <div class="temperature"><span>25&deg;</span></div>
+                        <div class="description">    
+                            <div class="weatherCondition">CLOUDY</div>    
+                            <div class="place">New York, New York</div>
+                        </div>
+                    </div>
+                    <div class="date">1st Jan</div>
+                </article>
             </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
