updated class html

--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,7 @@
     <a-scene embedded arjs>
         <a-marker preset="hiro">
             <!-- adding temperature panel using open weather api and look-at-->
-            <a-entity class="panel" htmlembed="ppu: 256" position="-2 1.5 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
+            <a-entity htmlembed="ppu: 256" position="0 0 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
                 <article class="widget">
                     <div class="weatherIcon"><i class="wi wi-day-cloudy"></i></div>
                     <div class="weatherInfo">
