--- a/test2/index.html
+++ b/test2/index.html
@@ -44,9 +44,11 @@
                 look-at="[camera]">
             </a-entity>
             <!-- adding temperature panel using open weather api and look-at-->
-            <a-entity class="panel" htmlembed="ppu: 256" position="0 2.6 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
-                <div id="location"> Loc blue? </div>
-                <div id="tempC"> Tem blue? </div>
+            <a-entity htmlembed="ppu: 256" position="0 2.6 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
+                <div class="panel">
+                    <div id="location"> Loc blue? </div>
+                    <div id="tempC"> Tem blue? </div>
+                </div>
             </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
