--- a/test2/index.html
+++ b/test2/index.html
@@ -45,9 +45,12 @@
             </a-entity>
             <!-- adding temperature panel using open weather api and look-at-->
             <a-entity htmlembed="ppu: 256" position="0 2.6 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
-                <div class="panel">
-                    <div id="location"> Loc blue? </div>
-                    <div id="tempC"> Tem blue? </div>
+                <div class="widget">
+                    <div class="left-panel panel">
+                        <div class="date"> Thursday, 25 Aug 2022 </div>
+                        <div class="location"> Loc blue? </div>
+                        <div class="tempC"> Tem blue? </div>
+                    </div>
                 </div>
             </a-entity>
         </a-marker>
