--- a/test2/index.html
+++ b/test2/index.html
@@ -49,7 +49,7 @@
                     <div class="left-panel panel">
                         <div class="date"> Thursday, 25 Aug 2022 </div>
                         <div class="location"> Loc blue? </div>
-                        <div class="tempC"> Tem blue? </div>
+                        <div class="tempC"> <img src="https://kristenphan.github.io/ar/assets/images/acn.png" alt="weather-icon" width="60"> Tem blue? </div>
                     </div>
                 </div>
             </a-entity>
