add placeholder [loc] [temp]

--- a/test2/index.html
+++ b/test2/index.html
@@ -48,8 +48,8 @@
                 <div class="widget">
                     <div class="left-panel panel">
                         <div class="date"> Thursday, 25 Aug 2022 </div>
-                        <div class="location"> Loc blue? </div>
-                        <div class="tempC"> Tem blue? </div>
+                        <div class="location"> [loc] </div>
+                        <div class="tempC"> [temp] </div>
                     </div>
                     <div class="right-panel panel"> 
                         <img src="https://kristenphan.github.io/ar/assets/images/acn.png" alt="acn-logo" width="30">
