--- a/test2/index.html
+++ b/test2/index.html
@@ -29,7 +29,7 @@
                     align: center; 
                     width: 3; 
                     font: https://kristenphan.github.io/ar/assets/fonts/oredo-regular-msdf/oredo-regular-msdf.json;
-                    value: !Make LS Run Great Again!"
+                    value: !Make Ls Run Great Again!"
                 look-at="[camera]">
             </a-entity>
             <!-- Adding body text with look-at-->
