added "almost" fridays

--- a/test2/index.html
+++ b/test2/index.html
@@ -40,7 +40,7 @@
                     align: center; 
                     width: 2; 
                     font: exo2semibold;
-                    value: What: Weekly 4 km runs\nWhen: Fridays @ 12 PM \nWhere: Edge office"
+                    value: What: Weekly 4 km runs\nWhen: (Almost) Fridays @ 12 PM \nWhere: Edge office"
                 look-at="[camera]">
             </a-entity>
             <!-- adding temperature panel using open weather api and look-at-->
