--- a/test2/index.html
+++ b/test2/index.html
@@ -49,7 +49,8 @@
                     <div class="left-panel panel">
                         <div class="date"> [date] </div>
                         <div class="location"> [loc] </div>
-                        <div class="tempC"> [temp] </div>
+                        <div id="normal" class="tempC"> [temp] </div>
+                        <div id="thin" class="tempC"> [temp] </div>
                     </div>
                     <div class="right-panel panel"> 
                         <img src="https://kristenphan.github.io/ar/assets/images/acn.png" alt="acn-logo" width="70">
