--- a/test2/index.html
+++ b/test2/index.html
@@ -49,8 +49,10 @@
                     <div class="left-panel panel">
                         <div class="date"> [date] </div>
                         <div class="location"> [loc] </div>
-                        <div id="normal" class="temp"> 20&deg; </div>
-                        <div id="thin" class="temp"> 20&deg; </div>
+                        <div class="icontemp">
+                            <div id="normal" class="tempC"> [temp] </div>
+                            <img style="float:left" class = "weather-icon" src="https://kristenphan.github.io/ar/assets/images/thunder.png" alt="weather-" width="50">
+                        </div>
                     </div>
                     <div class="right-panel panel"> 
                         <img src="https://kristenphan.github.io/ar/assets/images/acn.png" alt="acn-logo" width="70">
