--- a/test2/index.html
+++ b/test2/index.html
@@ -50,8 +50,8 @@
                         <div class="date"> [date] </div>
                         <div class="location"> [loc] </div>
                         <div class="icontemp">
+                            <img src="https://kristenphan.github.io/ar/assets/images/thunder.png" alt="weather-icon" width="50">
                             <div id="normal" class="tempC"> [temp] </div>
-                            <img style="float:left" class = "weather-icon" src="https://kristenphan.github.io/ar/assets/images/thunder.png" alt="weather-" width="50">
                         </div>
                     </div>
                     <div class="right-panel panel"> 
