reduce acn logo left padding; add temp left padding

--- a/test2/index.html
+++ b/test2/index.html
@@ -51,7 +51,7 @@
                         <div class="location"> [loc] </div>
                         <div class="icontemp">
                             <img src="https://kristenphan.github.io/ar/assets/images/thunder.png" alt="weather-icon" width="50">
-                            <div id="normal" class="tempC"> [temp] </div>
+                            <div class="tempC"> [temp] </div>
                         </div>
                     </div>
                     <div class="right-panel panel"> 
