--- a/mindar-course/course-material/applications/lectures-end-kp/500-video-feed/index.html
+++ b/mindar-course/course-material/applications/lectures-end-kp/500-video-feed/index.html
@@ -1,15 +1,12 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <script src="../../libs/mindar/mindar-image-three.prod.js"></script>
-    <script>
-      window.tf = window.MINDAR.IMAGE.tf;
-    </script>
+    <!-- tensorflow.js already included in mindar.js since tensorflow.js is a dependency of mindar.js -->
+    <script> window.tf = window.MINDAR.IMAGE.tf; </script>
+    <!-- Import script for hand-pose model -->
     <script src="https://unpkg.com/@tensorflow-models/handpose@0.0.6/dist/handpose.js"></script>
-
     <script src="./main.js" type="module"></script>
-
     <style>
       html, body {position: relative; margin: 0; width: 100%; height: 100%; overflow: hidden}
     </style>
