--- a/mindar-course/course-material/applications/lectures-end-kp/602-aframe-mindar/image.html
+++ b/mindar-course/course-material/applications/lectures-end-kp/602-aframe-mindar/image.html
@@ -2,20 +2,31 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="../../libs/mindar/mindar-image.prod.js"></script>
+    <!-- Important to import aframe.min.js first, then mindar-image-aframe.prod.js -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="../../libs/mindar/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: ../../assets/targets/musicband.mind" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <!-- Set vr-mode-ui="enabled: false" to hide the default VR/AR buttons which will trigger webXR mode  
+         color-space and renderer are custom renderer setting -->
+    <a-scene mindar-image="imageTargetSrc: ../../assets/targets/musicband.mind" 
+            color-space="sRGB" 
+            renderer="colorManagement: true, physicallyCorrectLights" 
+            vr-mode-ui="enabled: false" 
+            device-orientation-permission-ui="enabled: false">
       <a-assets>
         <a-asset-item id="raccoonModel" src="../../assets/models/musicband-raccoon/scene.gltf"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-
+      <!-- Add mindar-image-target to <a-entity> to create an anchor using compiled image target 
+           referenced by its idx. This <a-entity> works like a THREE.GROUP that will update 
+            the position of all of its associated entities continuously.
+            Add any type of a-frame entities to this anchor e.g., <a-gltf-model> here -->
       <a-entity mindar-image-target="targetIndex: 0">
         <a-gltf-model rotation="0 0 0 " position="0 -0.4 0" scale="0.1 0.1 0.1" src="#raccoonModel">
       </a-entity>
+      <!-- Can add another <a-entity> here referencing different image target e.g. targetIndex: 1 -->
     </a-scene>
   </body>
 </html>
