added comments to mindar files

--- a/mindar-course/course-material/applications/lectures-end-kp/200-image-start/index.html
+++ b/mindar-course/course-material/applications/lectures-end-kp/200-image-start/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <!-- Give the browser instructions on how to control the viewport (ie. user' visible are of web page)
+    <!-- Give the browser instructions on how to control the viewport (ie. user's visible are of web page)
     Web page width to match user's device width
     Zoom level of web page = 1 when web page first loaded -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
