--- a/mindar-course/course-material/applications/lectures-end-kp/202-custom-container/index.html
+++ b/mindar-course/course-material/applications/lectures-end-kp/202-custom-container/index.html
@@ -17,7 +17,7 @@
     <!-- Insert an AR container in the middle of the page 
     By default, <div> height = 0, so add <style> to make div visible
     Because of the way the video and canvas renderer are added to container, 
-    set position: relative and overflow: hidden 
+    set "position: relative" and "overflow: hidden" 
     so that even if the video has a different specs ratio than the container, 
     the overflow is hidden -->
     <div id='my-ar-container'></div>
