--- a/mindar-course/course-material/applications/lectures-end-kp/242-youtube/index.html
+++ b/mindar-course/course-material/applications/lectures-end-kp/242-youtube/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <div id="ar-div">
+      <!-- The <iframe> (and video player) will replace this <div id="player"> tag. -->
+      <!-- https://developers.google.com/youtube/iframe_api_reference -->
       <div id="player"></div>
     </div>
   </body>
