--- a/mindar-course/course-material/applications/lectures-end-kp/600-aframe/index.html
+++ b/mindar-course/course-material/applications/lectures-end-kp/600-aframe/index.html
@@ -3,7 +3,7 @@
     <script scr='https://aframe.io/releases/1.2.0/aframe.min.js'></script>
 </head>
 <body>
-    <!-- By default, <a-scene> is in full screen, so add embedded to specify canvas size -->
+    <!-- By default, <a-scene> is in full screen, so add "embedded" to specify canvas size -->
     <!-- three.js camera is already encapsulated inside <a-scene> -->
     <a-scene embedded style="width: 500px; height: 500px" background="color: #000000">
         <a-box position="0 0 -2" rotation="0 45 0" width="1" height="1" depth="1" color="#0000FF"></a-box>
