--- a/mindar-course/course-material/applications/lectures-end-kp/330-switch-camera/index.html
+++ b/mindar-course/course-material/applications/lectures-end-kp/330-switch-camera/index.html
@@ -7,15 +7,16 @@
     <style>
       html, body {position: relative; margin: 0; width: 100%; height: 100%; overflow: hidden}
       #switch {
-	position: fixed;
-	bottom: 5px;
-	left: 50%;
-	transform: translateX(-50%);
-	z-index: 10;
+        position: fixed;
+        bottom: 5px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 10;
       }
     </style>
   </head>
   <body>
+    <!-- Create a button to allow camera switch -->
     <button id="switch">Switch</button>
   </body>
 </html>
