added webxr-floating-cube + other mindar course exercises

--- a/mindar-course/course-material/applications/lectures-end-kp/601-aframe-webxr/index.html
+++ b/mindar-course/course-material/applications/lectures-end-kp/601-aframe-webxr/index.html
@@ -2,22 +2,41 @@
   <head>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="./components.js"></script>
-
     <style>
       #overlay {
-	position: fixed;
-	top: 100px;
-	padding: 10px;
-	z-index: 1001;
+        position: fixed;
+        top: 100px;
+        padding: 10px;
+        z-index: 1001;
       }
     </style>
   </head>
   <body>
-    <a-scene webxr="requiredFeatures:hit-test; optionalFeatures:dom-overlay; referenceSpaceType:local; overlayElement:#overlay" background="transparent: true"> 
-      <a-box id="box" width="0.1" height="0.1" depth="0.1" color="#0000FF" visible="false">v</a-box>
-      <a-entity ar-reticle geometry="primitive: ring; radiusInner: 0.15; radiusOuter: 0.2" rotation="-90 0 0" visible="false"></a-entity>
+    <!-- webxr param to enable WEbXR Manager 
+    Include additional params to request WebXR session e.g. requiredFeatures, etc.-->
+    <a-scene  webxr="requiredFeatures:hit-test; 
+                    optionalFeatures:dom-overlay; 
+                    referenceSpaceType:local; 
+                    overlayElement:#overlay" 
+              background="transparent: true"> 
+      <!-- When user taps the device scene, renders a box at the location of the reticle 
+      and update the location of the box as the reticle's location every time touch screen is tapped -->
+      <a-box  id="box" 
+              width="0.1" 
+              height="0.1" 
+              depth="0.1" 
+              color="#0000FF" 
+              visible="false">v</a-box>
+      <!-- Create reticle object to visually highlight a hit point. 
+        ar-reticle is a custom a-frame component defined in component.js -->
+      <a-entity ar-reticle 
+                geometry="primitive: ring; 
+                          radiusInner: 0.15; 
+                          radiusOuter: 0.2" 
+                rotation="-90 0 0" 
+                visible="false"></a-entity>
     </a-scene>
-
+    <!-- Create a dummy <div> overlay element -->
     <div id="overlay">
       Overlay
     </div>
