--- a/webxr-floating-cube/index.html
+++ b/webxr-floating-cube/index.html
@@ -1,8 +1,11 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+  <script type="importmap">
+    {"imports": {"three": "https://unpkg.com/three@0.144.0/build/three.module.js"}}
+  </script>
   <script type="module" src="./main.js"></script>
-  <script data-consolejs-channel="b4780273-5959-14c6-d82e-41ab9ea47d36" src="https://remotejs.com/agent/agent.js"></script>
   <style>
     body {margin: 0}
   </style>
