--- a/thesis/threejs-src/index.html
+++ b/thesis/threejs-src/index.html
@@ -12,9 +12,11 @@
 		<div id="dashboard">
 			<div id="dashboard-headline">
 				<img id="headline-image" src="../assets/images/acn.png" alt="acn-logo"/>
-				<div id="headline-text" class="text">Hello from Clara Montera! 😊</div>
+				<div id="headline-text" class="text">Hello from Vincent van Grow! 😊</div>
 			</div>
 			<div id="dashboard-title" class="text">How am I feeling today?</div>
+			<img id="water-cup" src="../assets/images/water-low.png" alt="water-cup"/>
+			<div id="humidity-reading" class="text">Humid: 25%</div>
 		</div>
 	</body>
 </html>
