--- a/pk6/index.html
+++ b/pk6/index.html
@@ -1,12 +1,8 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-  <script type="importmap">
-    {"imports": {"three": "https://unpkg.com/three@0.144.0/build/three.module.js"}}
-  </script>
+  <script src="./libs/three.js-r132/build/three.module.js"></script>
   <script type="module" src="./main.js"></script>
-  <script data-consolejs-channel="55af9def-89eb-bc28-fc55-466e1d2f8ce5" src="https://remotejs.com/agent/agent.js"></script>
   <style>
     body {margin: 0}
   </style>
