--- a/thesis/test/index.html
+++ b/thesis/test/index.html
@@ -1,30 +1,6 @@
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-three.prod.js"></script>
-    <script src="./main.js" type="module"></script>
-
-    <style>
-      html, body {
-	position: relative; margin: 0; width: 100%; height: 100%; overflow: hidden;
-      }
-      #ar-div {
-        width: 1000px;
-        height: 1000px;
-        visibility: hidden;
-        background: #0000ff;
-        opacity: 0.6;
-        font-size: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: white;
-      }
-    </style>
-  </head>
-  <body>
-      <div id='ar-div'>
-        whyy
-      </div>
-  </body>
-</html>
+<head>
+  <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-three.prod.js"></script>
+  <script src="main.js" type="module"></script>
+</head>
+<body>
+</body>
