--- a/pk6/index.html
+++ b/pk6/index.html
@@ -3,9 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./libs/three.js-r132/build/three.module.js"></script>
   <script type="module" src="./main.js"></script>
-  <style>
-    body {margin: 0}
-  </style>
+  <link rel='stylesheet' src='./styles.css'>
 </head>
 <body>
 </body>
