--- a/pk6/index.html
+++ b/pk6/index.html
@@ -6,6 +6,6 @@
   <link rel='stylesheet' src='./styles.css'/>
 </head>
 <body>
-  <div id="banner">❤ Happy 6 Months 26/09/22 ❤ </div>
+  <div id="banner">❤ Pitt. Happy 6 Months 26/09/22 ❤ </div>
 </body>
 </html>
