added water me button with event handler. not yet position button

--- a/thesis/threejs-src/index.html
+++ b/thesis/threejs-src/index.html
@@ -18,6 +18,9 @@
 			<img id="water-cup" src="../assets/images/water-low.png" alt="water-cup"/>
 			<div id="humidity-reading" class="text">Humid: 25%</div>
 		</div>
+		<div id="button-div">
+			<button class="button" id="water-me-button">Water Me</button>
+		</div>
 	</body>
 </html>
 
