added plant gltf

--- a/thesis/test/index.html
+++ b/thesis/test/index.html
@@ -1,5 +1,6 @@
 <head>
   <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-three.prod.js"></script>
+  <!-- <script src="../libs/mindar/mindar-image-three.prod.js"></script> -->
   <script src="main.js" type="module"></script>
 </head>
 <body>
