--- a/thesis/threejs-src/index.html
+++ b/thesis/threejs-src/index.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-three.prod.js"></script>
+		<!-- <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-three.prod.js"></script> -->
+		<script src="../libs/mindar/mindar-image-three.prod.js"></script>
 		<script src="./main.js" type="module"></script>
 		<link rel="stylesheet" href="./styles.css"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,6 +21,7 @@
 				<div id="dashboard-title" class="text">How am I feeling today?</div>
 				<img id="water-cup" src="../assets/images/water-low.png" alt="water-cup"/>
 				<div id="humidity-reading" class="text">Humid: 25%</div>
+				<div id="plant-description" class="text hidden">People also call me Swiss Cheese plane 🧀. View me in 3D and spin me around!</div>
 			</div>
 			<div id="dashboard-right">
 				<button id="water-me-button" class="button text">Water Me</button>
