added about me button but wrong logic

--- a/thesis/threejs-src/index.html
+++ b/thesis/threejs-src/index.html
@@ -13,23 +13,27 @@
 	</head>
 	<body>
 		<div id="dashboard">
-			<div id="dashboard-left">
-				<div id="dashboard-headline">
-					<img id="headline-image" src="../assets/images/acn.png" alt="acn-logo"/>
-					<div id="headline-text" class="text">Hello from Vincent van Grow! 😊</div>
-				</div>
-				<div id="dashboard-title" class="text">How am I feeling today?</div>
+			<div id="dashboard-headline">
+				<img id="headline-image" src="../assets/images/acn.png" alt="acn-logo"/>
+				<div id="headline-text" class="text">Hello from Vincent van Grow! 😊</div>
+			</div>
+			<div id="dashboard-content">
+				<div id="dashboard-title" class="text">dashboard-title</div>
 				<img id="water-cup" src="../assets/images/water-low.png" alt="water-cup"/>
 				<div id="humidity-reading" class="text">Humid: 25%</div>
-				<div id="plant-description" class="text hidden">People also call me Swiss Cheese plane 🧀. View me in 3D and spin me around!</div>
+				<div id="plant-description" class="text hidden">plant-description</div>
 			</div>
-			<div id="dashboard-right">
+			<div id="dashboard-top-right">
 				<button id="water-me-button" class="button text">Water Me</button>
 				<button id="view-history-button" class="button text">View History</button>
 				<button id="about-me-button" class="button text">About Me</button>
 				<button id="get-updates-button" class="button text">Get Updates</button>
-			</div>	
 			</div>
+			<div id="dashboard-bottom">
+				<button id="about-me-back-button" class="button text hidden">&lt; Back</button>
+				<button id="about-me-next-button" class="button text hidden">Next &gt;</button>
+				<button id="about-me-return-button" class="button text hidden">Return &gt;</button>
+			</div>	
 		</div>
 	</body>
 </html>
