--- a/thesis/threejs-src/index.html
+++ b/thesis/threejs-src/index.html
@@ -17,31 +17,31 @@
 			<div id="dashboard-skeleton">
 				<div id="dashboard-headline">
 					<img id="headline-image" src="../assets/images/acn.png" alt="acn-logo"/>
-					<div id="headline-text" class="text">Hello from Vincent van Grow! 😊</div>
+					<div id="headline-text">Hello from Vincent van Grow! 😊</div>
 				</div>
 			</div>
 			<div id="dashboard-home">
-				<div id="dashboard-title" class="text">How am I feeling?</div>
+				<div id="dashboard-title">How am I feeling?</div>
 				<img id="water-cup" src="../assets/images/water-low.png" alt="water-cup"/>
-				<div id="humidity-reading" class="text">Humid: 25%</div>
+				<div id="humidity-reading">Humid: 25%</div>
 				<div id="dashboard-home-buttons">
-					<button id="home-water-me-button" class="button text">Water Me</button>
-					<button id="home-view-history-button" class="button text">View History</button>
-					<button id="home-about-me-button" class="button text">About Me</button>
-					<button id="home-get-updates-button" class="button text">Get Updates</button>
+					<button id="home-water-me-button" class="button">Water Me</button>
+					<button id="home-view-history-button" class="button">View History</button>
+					<button id="home-about-me-button" class="button">About Me</button>
+					<button id="home-get-updates-button" class="button">Get Updates</button>
 				</div>
 			</div>
 			<div id="dashboard-aboutme-page1" class="hidden">
-				<div id="dashboard-title" class="text">Who am I?</div>
-				<div id="" class="text dashboard-text">People also call me Swiss Cheese plant 🧀. Walk around and view me in 3D!</div>
+				<div id="dashboard-title">Who am I?</div>
+				<div id="" class="dashboard-text">People also call me Swiss Cheese plant 🧀. Walk around and view me in 3D!</div>
 				<div class="dashboard-aboutme-page1-buttons">
-					<button id="aboutme-page1-back-button" class="button text dashboard-aboutme-back-button">&lt; Back</button>
-					<button id="aboutme-page1-next-button" class="button text">Next &gt;</button>
+					<button id="aboutme-page1-back-button" class="button dashboard-aboutme-back-button">&lt; Back</button>
+					<button id="aboutme-page1-next-button" class="button">Next &gt;</button>
 				</div>
 			</div>	
 			<div id="dashboard-aboutme-page2" class="hidden">
-				<div id="dashboard-title" class="text">Who am I?</div>
-				<div id="" class="text dashboard-text">Watch the video for some artworks about me 🎨.</div>
+				<div id="dashboard-title">Who am I?</div>
+				<div id="" class="dashboard-text">Watch the video for some artworks about me 🎨.</div>
 				<div id="vimeo-video">
 					<iframe src="https://player.vimeo.com/video/399995471?h=a0dd33ac0f&title=0&byline=0&portrait=0"
 								width="640"
@@ -49,8 +49,8 @@
 					</iframe>
 				</div>
 				<div class="dashboard-aboutme-page2-buttons">
-					<button id="aboutme-page2-back-button" class="button text dashboard-aboutme-back-button">&lt; Back</button>	
-					<button id="aboutme-page2-return-button" class="button text">Return &gt;</button>
+					<button id="aboutme-page2-back-button" class="button dashboard-aboutme-back-button">&lt; Back</button>	
+					<button id="aboutme-page2-return-button" class="button">Return &gt;</button>
 				</div>
 			</div>	
 		</div>
