add waving emoji to dashboard header

--- a/thesis/threejs-src/index.html
+++ b/thesis/threejs-src/index.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -5,19 +6,19 @@
 		<!-- <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-three.prod.js"></script> -->
 		<script src="../libs/mindar/mindar-image-three.prod.js"></script>
 		<script src="./main.js" type="module"></script>
-		<link rel="stylesheet" href="./styles.css"/>
+		<link rel="stylesheet" href="./styles.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
 		<link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
-		<script data-consolejs-channel="a1da4157-af47-f120-a1a9-133532a6d45a" src="https://remotejs.com/agent/agent.js"></script>
+		<!-- <script data-consolejs-channel="a1da4157-af47-f120-a1a9-133532a6d45a" src="https://remotejs.com/agent/agent.js"></script> -->
 	</head>
 	<body>
 		<div id="dashboard">
 			<div id="dashboard-skeleton">
 				<div id="dashboard-headline">
 					<img id="headline-image" src="../assets/images/acn.png" alt="acn-logo"/>
-					<div id="headline-text">Hello from Vincent van Grow! 😊</div>
+					<div id="headline-text">Hello from Vincent van Grow! 👋</div>
 				</div>
 			</div>
 			<div id="dashboard-home">
