added title: Main Dashboard

--- a/thesis/threejs-src/index.html
+++ b/thesis/threejs-src/index.html
@@ -12,6 +12,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
 		<link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
 		<!-- <script data-consolejs-channel="a1da4157-af47-f120-a1a9-133532a6d45a" src="https://remotejs.com/agent/agent.js"></script> -->
+		<title>Main Dashboard</title>
 	</head>
 	<body>
 		<div id="dashboard">
