added logic for displaying water cup based on moisture level + added boiler code for updating moisture level; no calls to iot yet

--- a/thesis/threejs-src/index.html
+++ b/thesis/threejs-src/index.html
@@ -11,7 +11,6 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
 		<link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
-		<!-- <script data-consolejs-channel="a1da4157-af47-f120-a1a9-133532a6d45a" src="https://remotejs.com/agent/agent.js"></script> -->
 		<title>Main Dashboard</title>
 	</head>
 	<body>
@@ -24,8 +23,9 @@
 			</div>
 			<div id="dashboard-home">
 				<div id="dashboard-title">How am I feeling?</div>
-				<img id="water-cup" src="../assets/images/water-low.png" alt="water-cup"/>
-				<div id="humidity-reading">Humid: 25%</div>
+				<img id="water-cup" src="../assets/images/water-high.png" alt="water-cup"/>
+				<div id="moisture-reading">Soil moisture: </div>
+				<div id="moisture-timestamp">Last update: </div>
 				<div id="dashboard-home-buttons">
 					<button id="home-water-me-button" class="button">Water Me</button>
 					<button id="home-view-history-button" class="button">View History</button>
