added powered by ls logo dashboard-footer

--- a/thesis/threejs-src/water-me.html
+++ b/thesis/threejs-src/water-me.html
@@ -21,5 +21,10 @@
       <button id="button-submit">Submit</button>
       <button id="button-return" onclick="location.href='index.html'">Return</button>
     </form>
+    <div id="dashboard-footer">Powered by 
+      <a href="https://liquidstudio.nl/">
+        <img id ="ls-logo" src="../assets/images/ls-nl.PNG" alt="liquid-studio-logo" width="102" height="50">
+      </a>
+    </div>
   </body>
 </html>
