edit dashboard-footer to make hyperlink in <a> to open in a new tab, not the current tab

--- a/thesis/threejs-src/index.html
+++ b/thesis/threejs-src/index.html
@@ -31,7 +31,7 @@
 				</div>
 			</div>
 			<div id="dashboard-footer">Powered by 
-				<a href="https://liquidstudio.nl/">
+				<a href="https://liquidstudio.nl/" target="_blank">
 					<img id ="ls-logo" src="../assets/images/ls-nl.PNG" alt="liquid-studio-logo" width="102" height="50">
 				</a>
 			</div>
