move <button> out of <form>. Return button returns to index.html regardless of whether radio button is clicked

--- a/thesis/threejs-src/water-me.html
+++ b/thesis/threejs-src/water-me.html
@@ -18,9 +18,9 @@
       <label for="good">Good</label><br>
       <input type="radio" id="not-good" name="plant-status" value="Not good" required>
       <label for="not-good">Not good</label><br><br>
-      <button id="button-submit">Submit</button>
-      <button id="button-return" onclick="location.href='index.html'">Return</button>
     </form>
+    <button id="button-submit">Submit</button>
+    <button id="button-return" onclick="location.href='./index.html'">Return</button>
     <div id="dashboard-footer">Powered by 
       <a href="https://liquidstudio.nl/">
         <img id ="ls-logo" src="../assets/images/ls-nl.PNG" alt="liquid-studio-logo" width="102" height="50">
