add target=_blank to open ls website on a new tab when user clicked on Powered By LS

--- a/thesis/threejs-src/water-me.html
+++ b/thesis/threejs-src/water-me.html
@@ -14,7 +14,7 @@
     <form>
       <h2>Record a splash 💦</h2>
       <p>What is the status of the plant?</p>
-      <input type="radio" id="good" name="plant-status" value="Good" required>
+      <input type="radio" id="good" name="plant-status" value="Good" required checked>
       <label for="good">Good</label><br>
       <input type="radio" id="not-good" name="plant-status" value="Not good" required>
       <label for="not-good">Not good</label><br><br>
@@ -22,7 +22,7 @@
     <button id="button-submit">Submit</button>
     <button id="button-return" onclick="location.href='./index.html'">Return</button>
     <div id="dashboard-footer">Powered by 
-      <a href="https://liquidstudio.nl/">
+      <a href="https://liquidstudio.nl/" target="_blank">
         <img id ="ls-logo" src="../assets/images/ls-nl.PNG" alt="liquid-studio-logo" width="102" height="50">
       </a>
     </div>
